--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dosis:300,400|Open+Sans:300,400">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="resource/css/style.css">
 
   <!--[if lt IE 9]>
@@ -23,8 +24,8 @@
 	<nav>
 		<ul>
 			<li><a href="#">home</a></li>
-			<li><a href="#">about</a></li>
-			<li><a href="#">portfolio</a></li>
+			<li><a href="#about">about</a></li>
+			<li><a href="#portfolio">portfolio</a></li>
 			<li><a href="#">contact</a></li>
 		</ul>
 	</nav>
@@ -34,20 +35,159 @@
 	</div>
 </section>
 
-<section class="about">
+<section id="about" class="about">
   <div class="container">
-    <div class="about__image">
-      <img src="resource\images\about-me.png" alt="andrew charlebois portrait">
-    </div>
-    <div class="about__text">
+    <div class="about__content">
       <h2>about me</h2>
+      <img src="resource\images\about-me.png" alt="andrew charlebois portrait">
       <p>Hey I'm Andrew, carpenter turned web developer. My passion for building and my attention to detail gives me the ability to pay close attention to every pixel to ensure that in any interface I develop is stunning, yet functional. I am a front-end developer based in Pembroke, Ontario. I'm self-taught and always growing my skills, learning something new every day.</p>
     </div>
   </div>
 </section>
 
-<section class="portfolio">
+<hr class="page-separator">
+
+<section id="portfolio" class="portfolio">
   <h2>Portfolio</h2>
+  <p class="sub-head mb-75">Previous web projects I have been involved in</p>
+  <div class="container">
+    <div class="portfolio__showcase clearfix">
+      <div class="portfolio__showcase-image">
+        <a href="https://www.dairygoodness.ca/cheese/all-you-need-is-cheese" target="_blank"><img src="resource\images\dfc-frame.png" alt="dairy farmers of canada mockup"></a>
+      </div>
+      <div class="portfolio__showcase-description">
+        <h3>Dairy Farmers of Canada</h3>
+        <i class="fa fa-tags" aria-hidden="true"></i>
+        <ul>
+          <li>what did</li>
+          <li>I do</li>
+          <li>for them</li>
+        </ul>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer scelerisque enim elit, at convallis nibh elementum eget. Duis tincidunt enim a risus tincidunt venenatis. Cras ullamcorper nibh sit amet lacinia fermentum. Curabitur sed commodo dui. Vivamus eleifend, enim vitae semper dignissim, ipsum erat rutrum dolor, et porttitor neque odio at mauris.</p>
+      </div>
+    </div>
+  </div>
+
+  <hr class="portfolio__showcase-separator">
+
+  <div class="container">
+    <div class="portfolio__showcase clearfix">
+      <div class="portfolio__showcase-image">
+        <a href="https://www.adidasavenuea.com/" target="_blank"><img src="resource\images\adidas-frame.png" alt="adidas avenue a mockup"></a>
+      </div>
+      <div class="portfolio__showcase-description">
+        <h3>Adidas Avenue A</h3>
+        <i class="fa fa-tags" aria-hidden="true"></i>
+        <ul>
+          <li>what did</li>
+          <li>I do</li>
+          <li>for them</li>
+        </ul>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer scelerisque enim elit, at convallis nibh elementum eget. Duis tincidunt enim a risus tincidunt venenatis. Cras ullamcorper nibh sit amet lacinia fermentum. Curabitur sed commodo dui. Vivamus eleifend, enim vitae semper dignissim, ipsum erat rutrum dolor, et porttitor neque odio at mauris.</p>
+      </div>
+    </div>
+  </div>
+
+  <hr class="portfolio__showcase-separator">
+
+  <div class="container">
+    <div class="portfolio__showcase clearfix">
+      <div class="portfolio__showcase-image">
+        <a href="https://www.ugo.ca/" target="_blank"><img src="resource\images\ugo-wallet-frame.png" alt="ugo wallet mockup"></a>
+      </div>
+      <div class="portfolio__showcase-description">
+        <h3>Ugo Wallet</h3>
+        <i class="fa fa-tags" aria-hidden="true"></i>
+        <ul>
+          <li>what did</li>
+          <li>I do</li>
+          <li>for them</li>
+        </ul>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer scelerisque enim elit, at convallis nibh elementum eget. Duis tincidunt enim a risus tincidunt venenatis. Cras ullamcorper nibh sit amet lacinia fermentum. Curabitur sed commodo dui. Vivamus eleifend, enim vitae semper dignissim, ipsum erat rutrum dolor, et porttitor neque odio at mauris.</p>
+      </div>
+    </div>
+  </div>
+
+  <hr class="portfolio__showcase-separator">
+
+  <div class="container clearfix">
+    <div class="portfolio__showcase clearfix">
+      <div class="portfolio__showcase-image">
+        <a href="https://www.tdaeroplan.com/" target="_blank"><img src="resource\images\td-aeroplan-frame.png" alt="td aeroplan mockup"></a>
+      </div>
+      <div class="portfolio__showcase-description">
+        <h3>TD Aeroplan</h3>
+        <i class="fa fa-tags" aria-hidden="true"></i>
+        <ul>
+          <li>what did</li>
+          <li>I do</li>
+          <li>for them</li>
+        </ul>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer scelerisque enim elit, at convallis nibh elementum eget. Duis tincidunt enim a risus tincidunt venenatis. Cras ullamcorper nibh sit amet lacinia fermentum. Curabitur sed commodo dui. Vivamus eleifend, enim vitae semper dignissim, ipsum erat rutrum dolor, et porttitor neque odio at mauris.</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="web-apps clearfix">
+    <div class="container">
+      <h2>web apps</h2>
+      <p class="sub-head mb-75">Personal projects that i've done</p>
+      <ul class="web-apps__showcase">
+        <a href="http://andrewchar.github.io/construction/" target="_blank">
+          <li>
+    				<img src="resource/images/calmech.png" alt="">
+    				<div class="caption full-height-width">
+    					<div class="blur full-height-width"></div>
+    					<div class="caption-text full-height-width">
+    						<h2>calmech development</h2>
+    						<p>Fictional construction website geared towards luxury homes and renovations. Project was built to practise applying css knowledge</p>
+    					</div>
+    				</div>
+    			</li>
+        </a>
+        <a href="http://andrewchar.github.io/calculator/" target="_blank">
+          <li>
+    				<img src="resource/images/calculator.png" alt="">
+    				<div class="caption full-height-width">
+    					<div class="blur full-height-width"></div>
+    					<div class="caption-text full-height-width">
+    						<h2>calculator</h2>
+    						<p>Project was built using JavaScript. What can I say? it's a calculator, always handy :)</p>
+    					</div>
+    				</div>
+    			</li>
+        </a>
+        <a href="http://andrewchar.github.io/pomodoro-clock/" target="_blank">
+          <li>
+    				<img src="resource/images/pomodoro.png" alt="">
+    				<div class="caption full-height-width">
+    					<div class="blur full-height-width"></div>
+    					<div class="caption-text full-height-width">
+    						<h2>pomodoro clock</h2>
+    						<p>Procrastination is the avoidance of doing a task which needs to be accomplished. Use my fully functional pomodoro clock to increase your focus and work flow!</p>
+    					</div>
+    				</div>
+    			</li>
+        </a>
+        <a href="http://andrewchar.github.io/wiki-viewer/" target="_blank">
+          <li>
+    				<img src="resource/images/wiki-viewer.png" alt="">
+    				<div class="caption full-height-width">
+    					<div class="blur full-height-width"></div>
+    					<div class="caption-text full-height-width">
+    						<h2>wikipedia viewer</h2>
+    						<p>Project developed to search Wikipedia entries and build a curated list of results to your search words in a minimal and sleek kind of way.</p>
+    					</div>
+    				</div>
+    			</li>
+        </a>
+      </ul>
+    </div>
+  </div>
+</section>
+
+<section class="contact-me">
+  
 </section>
 
   <script src="js/scripts.js"></script>
