--- a/index.html
+++ b/index.html
@@ -186,9 +186,33 @@
   </div>
 </section>
 
-<section class="contact-me">
-  
+<section class="contact">
+  <div class="container">
+    <div class="contact__content">
+      <h2>let's chat!</h2>
+      <p class="sub-head mb-35">Send me an email if you have any questions or would like to chat.</p>
+      <div class="button">
+        <a href="mailto:me@andrewcharlebois.com">Send an Email</a>
+      </div>
+    </div>
+  </div>
 </section>
+
+<footer>
+  <div class="footer__social">
+    <ul>
+      <li>
+        <a href="https://www.linkedin.com/in/andrew-charlebois-a4b947113/"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a>
+      </li>
+      <li>
+        <a href="https://twitter.com/andrew_char"><i class="fa fa-twitter fa-3x" aria-hidden="true"></i></a>
+      </li>
+    </ul>
+  </div>
+  <div class="footer__copyright">
+    <p class="copy-right">Copyright © 2016 by Andrew Charlebois. All rights reserved.</p>
+  </div>
+</footer>
 
   <script src="js/scripts.js"></script>
 </body>
