add family kitchen to portfolio section

--- a/index.html
+++ b/index.html
@@ -55,6 +55,24 @@
     <p class="sub-head mb-75">Previous web projects I have been involved in</p>
     <div class="portfolio__showcase clearfix">
       <div class="portfolio__showcase-image">
+        <a href="http://www.familykitchen.ca/" target="_blank"><img src="resource\images\family-kitchen-frame.png" alt="family kitchen mockup"></a>
+      </div>
+      <div class="portfolio__showcase-description">
+        <h3>Family Kitchen</h3>
+        <i class="fa fa-tags" aria-hidden="true"></i>
+        <ul>
+          <li>responsive</li>
+          <li>psd to webpage</li>
+          <li>html5/css3/javascript</li>
+        </ul>
+        <p>Family kitchen is an extension site of Dairy Farmers of Canada. My role within the project was sole Front-End Developer responsible for creating the entire site from PSD's. I worked closely with UX and designers to ensure specifications were maintained throughout development for multiple breakpoints to be highly responsive.</p>
+      </div>
+    </div>
+
+    <hr class="portfolio__showcase-separator">
+
+    <div class="portfolio__showcase clearfix">
+      <div class="portfolio__showcase-image">
         <a href="https://www.dairygoodness.ca/cheese/all-you-need-is-cheese" target="_blank"><img src="resource\images\dfc-frame.png" alt="dairy farmers of canada mockup"></a>
       </div>
       <div class="portfolio__showcase-description">
