replace normalize cdn with local copy

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
   <meta name="description" content="Andrew Charlebois | Front-End Developer | Portfolio">
   <meta name="author" content="Andrew Charlebois">
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.css">
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.css"> -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dosis:300,400|Open+Sans:300,400">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="vendor/css/normalize.css">
   <link rel="stylesheet" href="resource/css/style.css">
 
   <!--[if lt IE 9]>
