clean up code a bit and fix hero styles

--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
 			<li><a href="#contact">contact</a></li>
 		</ul>
 	</nav>
-	<div class="hero__text">
-	  <h1>andrew charlebois</h1>
-    <p>Front-End Developer</p>
+	<div class="hero__text container">
+    <div class="hero__text--wrapper">
+  	  <h1>andrew charlebois</h1>
+      <p>Front-End Developer</p>
+    </div>
 	</div>
 </section>
 
@@ -151,7 +153,7 @@
     					<div class="blur full-height-width"></div>
     					<div class="caption-text full-height-width">
     						<h2>calmech development</h2>
-    						<p>Fictional construction website geared towards luxury homes and renovations. Project was built to practice applying my css knowledge</p>
+    						<p>Fictional construction website geared towards luxury homes and renovations. Project was built to practice applying my css knowledge.</p>
     					</div>
     				</div>
     			</li>
@@ -221,7 +223,7 @@
     </ul>
   </div>
   <div class="footer__copyright">
-    <p class="copy-right">Copyright © 2016 by Andrew Charlebois. All rights reserved.</p>
+    <p class="copy-right">Copyright © 2017 by Andrew Charlebois. All rights reserved.</p>
   </div>
 </footer>
 
