implement fix for hero bg-img to display correctly on IOS && re-style mobile nav

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Portfolio | Andrew Charlebois</title>
   <meta name="description" content="Andrew Charlebois | Front-End Developer | Portfolio">
   <meta name="author" content="Andrew Charlebois">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dosis:300,400|Open+Sans:300,400">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
