[CHORE]: Code refactoring

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <title>Portfolio | Andrew Charlebois</title>
   <meta name="description" content="Andrew Charlebois | Front-End Developer | Portfolio">
   <meta name="author" content="Andrew Charlebois">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dosis:300,400|Open+Sans:300,400">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -30,19 +29,17 @@
 			<li><a href="#contact">contact</a></li>
 		</ul>
 	</nav>
-	<div class="hero__text container">
-    <div class="hero__text--wrapper">
+	<div class="hero-text container">
   	  <h1>andrew charlebois</h1>
       <p>Front-End Developer</p>
-    </div>
 	</div>
 </section>
 
 <section id="about" class="about offset">
   <div class="container">
-    <div class="about__content">
+    <div class="about-content">
       <h2>about me</h2>
-      <img src="resource\images\about-me.png" alt="andrew charlebois portrait">
+      <img src="resource/images/about-me.png" alt="andrew charlebois portrait">
       <p>Hey, I'm Andrew, a carpenter turned web developer. My passion for building and my attention to detail gives me the ability to pay close attention to every pixel to ensure that in any interface I develop is stunning, yet functional. I am a front-end developer based in Pembroke, Ontario. I'm self-taught and always growing my skills, learning something new every day.</p>
       <h3>what i do</h3>
       <p>I specialize in Front-End Development (HTML5, CSS3, JavaScript). I have also done some work with PHP and WordPress.</p>
@@ -56,11 +53,11 @@
   <div class="container">
     <h2>Portfolio</h2>
     <p class="sub-head mb-75">Previous web projects I have been involved in</p>
-    <div class="portfolio__showcase clearfix">
-      <div class="portfolio__showcase-image">
-        <a href="http://www.familykitchen.ca/" target="_blank"><img src="resource\images\family-kitchen-frame.png" alt="family kitchen mockup"></a>
+    <div class="clearfix">
+      <div class="portfolio-showcase__image">
+        <a href="http://www.familykitchen.ca/" target="_blank"><img src="resource/images/family-kitchen-frame.png" alt="family kitchen mockup"></a>
       </div>
-      <div class="portfolio__showcase-description">
+      <div class="portfolio-showcase__description">
         <h3>Family Kitchen</h3>
         <i class="fa fa-tags" aria-hidden="true"></i>
         <ul>
@@ -72,13 +69,13 @@
       </div>
     </div>
 
-    <hr class="portfolio__showcase-separator">
+    <hr class="portfolio-showcase__separator">
 
-    <div class="portfolio__showcase clearfix">
-      <div class="portfolio__showcase-image">
-        <a href="https://www.dairygoodness.ca/cheese/all-you-need-is-cheese" target="_blank"><img src="resource\images\dfc-frame.png" alt="dairy farmers of canada mockup"></a>
+    <div class="clearfix">
+      <div class="portfolio-showcase__image">
+        <a href="https://www.dairygoodness.ca/cheese/all-you-need-is-cheese" target="_blank"><img src="resource/images/dfc-frame.png" alt="dairy farmers of canada mockup"></a>
       </div>
-      <div class="portfolio__showcase-description">
+      <div class="portfolio-showcase__description">
         <h3>Dairy Farmers of Canada</h3>
         <i class="fa fa-tags" aria-hidden="true"></i>
         <ul>
@@ -89,13 +86,13 @@
       </div>
     </div>
 
-    <hr class="portfolio__showcase-separator">
+    <hr class="portfolio-showcase__separator">
 
-    <div class="portfolio__showcase clearfix">
-      <div class="portfolio__showcase-image">
-        <a href="https://www.adidasavenuea.com/" target="_blank"><img src="resource\images\adidas-frame.png" alt="adidas avenue a mockup"></a>
+    <div class="clearfix">
+      <div class="portfolio-showcase__image">
+        <a href="https://www.adidasavenuea.com/" target="_blank"><img src="resource/images/adidas-frame.png" alt="adidas avenue a mockup"></a>
       </div>
-      <div class="portfolio__showcase-description">
+      <div class="portfolio-showcase__description">
         <h3>Adidas Avenue A</h3>
         <i class="fa fa-tags" aria-hidden="true"></i>
         <ul>
@@ -106,13 +103,13 @@
       </div>
     </div>
 
-    <hr class="portfolio__showcase-separator">
+    <hr class="portfolio-showcase__separator">
 
-    <div class="portfolio__showcase clearfix">
-      <div class="portfolio__showcase-image">
-        <a href="https://www.ugo.ca/" target="_blank"><img src="resource\images\ugo-wallet-frame.png" alt="ugo wallet mockup"></a>
+    <div class="clearfix">
+      <div class="portfolio-showcase__image">
+        <a href="https://www.ugo.ca/" target="_blank"><img src="resource/images/ugo-wallet-frame.png" alt="ugo wallet mockup"></a>
       </div>
-      <div class="portfolio__showcase-description">
+      <div class="portfolio-showcase__description">
         <h3>Ugo Wallet</h3>
         <i class="fa fa-tags" aria-hidden="true"></i>
         <ul>
@@ -122,14 +119,13 @@
       </div>
     </div>
 
-    <hr class="portfolio__showcase-separator">
+    <hr class="portfolio-showcase__separator">
 
-    <div class="clearfix">
-      <div class="portfolio__showcase clearfix">
-        <div class="portfolio__showcase-image">
-          <a href="https://www.tdaeroplan.com/" target="_blank"><img src="resource\images\td-aeroplan-frame.png" alt="td aeroplan mockup"></a>
+      <div class="clearfix">
+        <div class="portfolio-showcase__image">
+          <a href="https://www.tdaeroplan.com/" target="_blank"><img src="resource/images/td-aeroplan-frame.png" alt="td aeroplan mockup"></a>
         </div>
-        <div class="portfolio__showcase-description">
+        <div class="portfolio-showcase__description">
           <h3>TD Aeroplan</h3>
           <i class="fa fa-tags" aria-hidden="true"></i>
           <ul>
@@ -141,7 +137,6 @@
           <p>Worked closely with an agile team for this project. Worked with Symfony to create many new web pages leveraging templates or creating new page templates to incorporate new layouts for credit card sign up pages. It was joyfully challenging working with Javascript to incorporate much of the functionality into the page, including geo-location and managing promotion codes correctly.</p>
         </div>
       </div>
-    </div>
 
     <div class="web-apps clearfix">
       <h2>web apps</h2>
@@ -228,7 +223,7 @@
   </div>
 </footer>
 
-  <script src="vendor\js\noframework.waypoints.min.js"></script>
-  <script src="resource\js\script.js"></script>
+  <script src="vendor/js/noframework.waypoints.min.js"></script>
+  <script src="resource/js/script.js"></script>
 </body>
 </html>
