add random quote machine project to portfolio

--- a/index.html
+++ b/index.html
@@ -143,6 +143,18 @@
       <h2>web apps</h2>
       <p class="sub-head mb-75">Personal projects that I've done</p>
       <ul class="web-apps__showcase">
+        <a href="https://andrewchar.github.io/random-quote-machine/" target="_blank">
+          <li>
+    				<img src="resource/images/random-quote-machine.png" alt="">
+    				<div class="caption full-height-width">
+    					<div class="blur full-height-width"></div>
+    					<div class="caption-text full-height-width">
+    						<h2>Random Quote Machine</h2>
+    						<p>A project built using fetch API and Twitter Web Intents to tweet dynamically loaded quotes.</p>
+    					</div>
+    				</div>
+    			</li>
+        </a>
         <a href="http://andrewchar.github.io/construction/" target="_blank">
           <li>
     				<img src="resource/images/calmech.png" alt="">
