add markdown-preview project

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <img src="resource/images/about-me.png" alt="andrew charlebois portrait">
       <p>Hey, I'm Andrew, a carpenter turned web developer. My passion for building and my attention to detail gives me the ability to pay close attention to every pixel to ensure that in any interface I develop is stunning, yet functional. I am a front-end developer based in Pembroke, Ontario. I'm self-taught and always growing my skills, learning something new every day.</p>
       <h3>what i do</h3>
-      <p>I specialize in Front-End Development (HTML5, CSS3, JavaScript). I have also done some work with PHP and WordPress.</p>
+      <p>I specialize in Front-End Development (HTML5, CSS3, JavaScript). I am currently learning and building projects with React!</p>
     </div>
   </div>
 </section>
@@ -143,6 +143,18 @@
       <h2>web apps</h2>
       <p class="sub-head mb-75">Personal projects that I've done</p>
       <ul class="web-apps__showcase">
+        <a href="https://andrewchar.github.io/markdown-preview/" target="_blank">
+          <li>
+    				<img src="resource/images/markdown-preview.png" alt="">
+    				<div class="caption full-height-width">
+    					<div class="blur full-height-width"></div>
+    					<div class="caption-text full-height-width">
+    						<h2>Markdown Preview</h2>
+    						<p>Markdown-preview app built with React and utilizes Bootstrap for responsiveness. The apps live previewer updates as you type.</p>
+    					</div>
+    				</div>
+    			</li>
+        </a>
         <a href="https://andrewchar.github.io/random-quote-machine/" target="_blank">
           <li>
     				<img src="resource/images/random-quote-machine.png" alt="">
@@ -162,7 +174,7 @@
     					<div class="blur full-height-width"></div>
     					<div class="caption-text full-height-width">
     						<h2>calmech development</h2>
-    						<p>Fictional construction website geared towards luxury homes and renovations. Project was built to practice applying my css knowledge.</p>
+    						<p>Fictional construction website. Project was built to practice applying my css knowledge.</p>
     					</div>
     				</div>
     			</li>
@@ -174,7 +186,7 @@
     					<div class="blur full-height-width"></div>
     					<div class="caption-text full-height-width">
     						<h2>calculator</h2>
-    						<p>The project was built using JavaScript. What can I say? it's a calculator, always handy :)</p>
+    						<p>The project was built using JavaScript. What can I say? it's a calculator :)</p>
     					</div>
     				</div>
     			</li>
@@ -186,7 +198,7 @@
     					<div class="blur full-height-width"></div>
     					<div class="caption-text full-height-width">
     						<h2>pomodoro clock</h2>
-    						<p>Procrastination is the avoidance of doing a task which needs to be accomplished. Use my fully functional Pomodoro clock to increase your focus and workflow!</p>
+    						<p>Use my fully functional Pomodoro clock to increase your focus and workflow!</p>
     					</div>
     				</div>
     			</li>
@@ -198,7 +210,7 @@
     					<div class="blur full-height-width"></div>
     					<div class="caption-text full-height-width">
     						<h2>wikipedia viewer</h2>
-    						<p>The project developed to search Wikipedia entries and build a curated list of results to your search words in a minimal and sleek kind of way.</p>
+    						<p>Using the Wikipedia API, this app will display user-provided search queries.</p>
     					</div>
     				</div>
     			</li>
