--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 
 <section id="home" class="hero">
-	<nav id="nav">
+	<nav id="nav" class="nav">
 		<ul>
 			<li><a href="#home">home</a></li>
 			<li><a href="#about">about</a></li>
